//
//  AccessibilityIdentifiers.swift
//  xkcd_assignment
//
//  Created by Tijana on 04/03/2023.
//

import Foundation

enum AccessibilityIdentifier: String {
    case title
    case comicNum
    case comicImage
    case prevButton
    case latestButton
    case nextButton
    case favourite
    case tabBarBrowse
    case tabBarFavorites
    case tabBarSearch
}
